--- a/boring-lecture.html
+++ b/boring-lecture.html
@@ -6,12 +6,13 @@
   </head>
   <body>
     <h1>Boring Lectures</h1>
-    <h2 class="intro">There are some teachers that can make absolutely any subject interesting. They can start talking about something and within no time at all you’ll start nodding along and locking your attention on them whether you like it or not. These teachers couldn’t deliver a boring lecture if they were tied to a chair and forced to speak with a sock in their  mouth.</h2>
-    <img class="intro" src="img/c44c2-lecture.jpg" alt="Lecture image">
-    <h2>Note Focus</h2>
-    <p class="intro">Since the teacher is boring, you need to find something you can make interesting. While I usually don’t recommend note taking unless the student really enjoys the process, this is a time when note taking can be a huge advantage.
-      When you take notes, you give your brain an explicit purpose in listening to the teacher speak. If you’re not writing something down on your sheet of paper then you instantly know you’re probably not paying enough attention. While you shouldn’t try to get down every word the teacher says, if keeping up with the teacher is an absolute breeze then continue trying to write down more.</p>
-
+    <div class="imp">
+      <h2>There are some teachers that can make absolutely any subject interesting. They can start talking about something and within no time at all you’ll start nodding along and locking your attention on them whether you like it or not. These teachers couldn’t deliver a boring lecture if they were tied to a chair and forced to speak with a sock in their  mouth.</h2>
+      <img src="img/c44c2-lecture.jpg" alt="Lecture image">
+      <h2>Note Focus</h2>
+      <p>Since the teacher is boring, you need to find something you can make interesting. While I usually don’t recommend note taking unless the student really enjoys the process, this is a time when note taking can be a huge advantage.
+        When you take notes, you give your brain an explicit purpose in listening to the teacher speak. If you’re not writing something down on your sheet of paper then you instantly know you’re probably not paying enough attention. While you shouldn’t try to get down every word the teacher says, if keeping up with the teacher is an absolute breeze then continue trying to write down more.</p>
+    </div>
     <h2>The Subject – Not The Speaker</h2>
     <p>Make sure you’re focusing on the subject of the boring lecture instead of the speaker.
        Focusing on a person that talks too slow or speaks in a monotone voice can be downright painful. If you want to put up with it then it’s usually best to focus as much of your energy on the subject as you can. Don’t try to hear the teacher’s enthusiasm. Don’t listen for emotional content. Listen as if the teacher is just a computer reading off something. Listen mechanically instead of emotionally
