--- a/boring-lecture.html
+++ b/boring-lecture.html
@@ -15,8 +15,7 @@
     </div>
     <h2>The Subject – Not The Speaker</h2>
     <p>Make sure you’re focusing on the subject of the boring lecture instead of the speaker.
-       Focusing on a person that talks too slow or speaks in a monotone voice can be downright painful. If you want to put up with it then it’s usually best to focus as much of your energy on the subject as you can. Don’t try to hear the teacher’s enthusiasm. Don’t listen for emotional content. Listen as if the teacher is just a computer reading off something. Listen mechanically instead of emotionally
+       Focusing on a person that talks <span class="hello">too</span> slow or speaks in a monotone voice can be downright painful. If you want to put up with it then it’s usually best to focus as much of your energy on the subject as you can. Don’t try to hear the teacher’s enthusiasm. Don’t listen for emotional content. Listen as if the teacher is just a computer reading off something. Listen mechanically instead of emotionally
        This is a process of distancing yourself from your own emotions. Do everything you can to keep all your emotional energy on your own re-presentation of the information you’re being told. By focusing on that you can limit your distraction and boredom during the worst of it.</p>
-
   </body>
 </html>
